tests/type-errors/duplicated_action.arl
archetype duplicated_action

action main () {
  effect {
    require (true)
  }
}

action main () {
  effect {
    require (true)
  }
}
